--- a/front/index.html
+++ b/front/index.html
@@ -6,9 +6,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Latest compiled JavaScript -->
 </head>
 
+
 <body>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-dark p-3" id="mainNavBar">
+            <div class="container-fluid">
+                <a href="" class="navbar-brand text-white">Ötvös Mester</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+                    <span class="navbar-toggler-icon">
+                        
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a href="" class="nav-link text-white">Home</a></li>
+                        <li class="nav-item"><a href="" class="nav-link text-white">About</a></li>
+                        <li class="nav-item"><a href="" class="nav-link text-white">Contact</a></li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="containter-fluid">
+        <div><img src="images/banner.JPG" alt="" class="img-fluid"></div>
+
+        <div class="container my-5 d-grid gap-5">
+            <div class="p-5 border">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, dignissimos! Nostrum magnam corporis ex necessitatibus, distinctio mollitia nemo velit nisi? Ut quo incidunt aliquid, cupiditate neque dignissimos dolore sit distinctio.
+                </p>
+            </div>
+            <div class="p-5 border">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, dignissimos! Nostrum magnam corporis ex necessitatibus, distinctio mollitia nemo velit nisi? Ut quo incidunt aliquid, cupiditate neque dignissimos dolore sit distinctio.
+                </p>
+            </div>
+            <div class="p-5 border">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, dignissimos! Nostrum magnam corporis ex necessitatibus, distinctio mollitia nemo velit nisi? Ut quo incidunt aliquid, cupiditate neque dignissimos dolore sit distinctio.
+                </p>
+            </div>
+            <div class="p-5 border">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, dignissimos! Nostrum magnam corporis ex necessitatibus, distinctio mollitia nemo velit nisi? Ut quo incidunt aliquid, cupiditate neque dignissimos dolore sit distinctio.
+                </p>
+            </div>
+        </div>
+    </main>
+
+    <!-- <script>
+        var nav = document.getElementById('mainNavBar')
+        var see = function(){
+            var ypos = window.pageYOffset;
+            if(ypos<100)
+            {
+                nav.classList.add('bg-dark')
+            }
+            else
+            {
+                nav.classList.remove('bg-dark')
+            }
+        }
+
+        window.addEventListener('scroll', see);
+
+    </script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    
+</body>
+
+<!-- <body>
 <header>
     <img src="images/logo5.png" alt="logo.png" alt="logo" width="200">
     <nav>
@@ -21,7 +96,17 @@
     </nav>
 </header>
 
+<nav class="navbar navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo5.png" alt="" width="30" height="25">
+        </a>
+    </div>
 
-</body>
+
+</nav>
+
+
+</body> -->
 
 </html>
