--- a/front/index.html
+++ b/front/index.html
@@ -40,7 +40,7 @@
             <img src="images/banner.JPG" alt="" class="img-fluid">
         </div> -->
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" id="slideshow">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
